# PythonRepoTemplate

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/: README.md
.github/workflow/: scheduler.yaml
.github/workflows/: template.yaml
